<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:background="@color/main_ic">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@drawable/demo1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:context="geen.box.MainActivity">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/app_name"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <GridLayout
                        android:id="@+id/mainGrid"
                        android:layout_width="0dp"
                        android:layout_height="410dp"
                        android:layout_marginTop="200dp"
                        android:layout_weight="8"
                        android:alignmentMode="alignMargins"
                        android:columnCount="2"
                        android:columnOrderPreserved="false"
                        android:rowCount="2">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_columnWeight="1"
                            android:layout_margin="5dp"
                            android:layout_rowWeight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/img_card_item"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/image1"
                                    android:scaleType="centerCrop"/>

                                <TextView
                                    android:id="@+id/title_card_item"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:gravity="center_horizontal"
                                    android:paddingBottom="15dp"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="10dp"
                                    android:paddingTop="15dp"
                                    android:text="@string/but_hons"
                                    android:textSize="16sp"/>
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/main_vocational"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_columnWeight="1"
                            android:layout_margin="5dp"
                            android:layout_rowWeight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="16dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/graduate" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:gravity="center"
                                    android:padding="3dp"
                                    android:text="@string/but_vocational"
                                    android:textSize="13sp" />


                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/main_que"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_columnWeight="1"
                            android:layout_margin="5dp"
                            android:layout_rowWeight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="16dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/writing" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:gravity="center"
                                    android:padding="3dp"
                                    android:text="@string/activity_question_Paper"
                                    android:textSize="13sp" />


                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/main_syllabus"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_columnWeight="1"
                            android:layout_margin="5dp"
                            android:layout_rowWeight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="16dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/pin" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:gravity="center"
                                    android:padding="3dp"
                                    android:text="@string/activity_syllabus"
                                    android:textSize="13sp" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>


                        <android.support.v7.widget.CardView
                            android:id="@+id/main_newupdate"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_columnWeight="1"
                            android:layout_margin="5dp"
                            android:layout_rowWeight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="16dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_alarm" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:gravity="center"
                                    android:padding="3dp"
                                    android:text="@string/activity_new_update"
                                    android:textSize="13sp" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>


                        <android.support.v7.widget.CardView
                            android:id="@+id/main_sharing"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_columnWeight="1"
                            android:layout_margin="5dp"
                            android:layout_rowWeight="1"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="2dp"
                            app:cardElevation="2dp">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="16dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_sharing" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:gravity="center"
                                    android:padding="3dp"
                                    android:text="@string/action_share"
                                    android:textSize="13sp" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </GridLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>